# ultimate_py_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.txt
addons/flag_addon/flag/: Flag.cxx  Flag.h
addons/flag_addon/flag/parser/: FlagParser.cxx  FlagParser.h
addons/flag_addon/physics_body/: PhysicsBody.cxx  PhysicsBody.h
addons/flag_addon/spring_constraint/: SpringConstraint.cxx  SpringConstraint.h
include/CL/: opencl.hpp
scenes/: CLTestScene.cxx  CanyonScene.cxx  ClPhysicsScene.cxx  ClPhysicsScene.h  ClTestScene.cxx  Control.cxx  Gas3DScene.cxx  GasScene2D.cxx  GlTestScene.cxx  GlobalSceneDescription.sd  MeshScene.cxx  ParserTestScene.cxx  SceneGLAdvanced.cxx  SceneLoader.cxx  SimpleFluidScene.cxx  TestScene.cxx
src/: Definitions.h  main.cxx
src/core/: Compositor.cxx  Compositor.h  Core.cxx  Core.h  SceneCompositor.cxx  SceneCompositor.h
src/core/components/: AbstractObject.cxx  AbstractObject.h  ObjectFactory.cxx  ObjectFactory.h  Parser.cxx  Parser.h  Scene.cxx  Scene.h
src/core/components/CL/: ClBuffer.cxx  ClBuffer.h
src/core/components/scene/: IScene.h  PhysicalScene.cxx  PhysicalScene.h  RenderScene.cxx  RenderScene.h  Scene.cxx  Scene.h
src/core/managers/: Capturer.cxx  Capturer.h
src/core/managers/sub_programs_managers/: CLManager.cxx  CLManager.h
src/core/managers/sub_programs_managers/CL/: CLManager.cxx  CLManager.h
src/core/managers/sub_programs_managers/shader_manager/: Shader.cxx  Shader.h  ShaderManager.cxx  ShaderManager.h
src/core/managers/window_manager/: WindowCompositor.cxx  WindowCompositor.h
src/core/maths/: MathHeaders  Operator.h  Vector3.h
src/core/physics/: Collision.cxx  Collision.h  CollisionSolver.cxx  CollisionSolver.h  FluidContainer.cpp  FluidContainer.h  GasContainer.cpp  GasContainer.h  IPhysicalObject.h  PhysObject.cxx  PhysObject.h  PhysicalEngine.cxx  PhysicalEngine.h  PhysicalObject.h  PhysicsDefinitions.h  PhysicsDefs.h  PhysicsHeaders.h  PhysicsObject.cxx  PhysicsObject.h  PhysicsSimulator.cxx  PhysicsSimulator.h  Simulator.cpp  Simulator.cxx  Simulator.h  StaticObject.cpp  StaticObject.h
src/core/physics/fluid/: Ceil.cxx  Ceil.h  Cell.cxx  Cell.h  CellsDistribution.cxx  CellsDistribution.h  CellsDistributor.cxx  CellsDistributor.h  CollisionPairs.cpp  CollisionPairs.h  Fluid1Container.cxx  Fluid1Container.h  FluidContainer.cxx  FluidContainer.h  IFluidContainer.h  Particle.cxx  Particle.h  SimpleFluidContainer.cxx  SimpleFluidContainer.h
src/core/physics/fluid/advanced_fluid/: AdvancedFluidContainer.cxx  AdvancedFluidContainer.h  InteractionSolver.cxx  InteractionSolver.h
src/core/physics/fluid/advanced_fluid/cl_helper/: ClInteractionSolver.cpp  ClInteractionSolver.h
src/core/physics/fluid/diff_fluid/: AdvancedFluidContainer.cxx  AdvancedFluidContainer.h
src/core/physics/fluid/fluid1/: CellsDistribution.cxx  CellsDistribution.h  Fluid1Container.cxx  Fluid1Container.h
src/core/physics/fluid/simple_fluid/: CellsDistribution.cxx  CellsDistribution.h  CellsDistributor.cxx  CellsDistributor.h  CollisionPairs.cpp  CollisionPairs.h  SimpleFluidContainer.cxx  SimpleFluidContainer.h
src/core/physics/gas/: GasCell.cxx  GasCell.h  GasContainer.cxx  GasContainer.h  GasContainer2D.cxx  GasContainer2D.h
src/core/physics/solid/: ISolid.h  Solid.cxx  Solid.h  SolidSphere.cpp  SolidSphere.h
src/core/physics/solid/mesh/: Mesh.cxx  Mesh.h  Plane.cxx  Plane.h  SolidCube.cxx  SolidMesh.cpp  SolidMesh.cxx  SolidMesh.h  SolidСube.cxx  SolidСube.h  Triangle.cxx  Triangle.h
src/core/physics/solid/sphere/: SolidSphere.cpp  SolidSphere.cxx  SolidSphere.h  Sphere.cxx  Sphere.h
src/core/render/: Renderer.Main.cxx  Renderer.Render.cxx  Renderer.cxx  Renderer.h
src/core/render/components/: Object.cxx  Object.h  RenderObject.cxx  RenderObject.h  Scene.cxx  Scene.h  Vertex.cxx  Vertex.h
src/core/render/components/baked_mesh/: BakedMesh.cxx  BakedMesh.h
src/core/render/components/camera/: Camera.cxx  Camera.h
src/core/render/components/light/: BasicLight.h
src/core/render/components/light/presets/: DirectionalLight.h  PointLight.h  SpotLight.h
src/core/render/components/material/: BaseMaterial.h  BasicMaterial.h  MaterialFactory.cxx  MaterialFactory.h  MaterialPresets.h
src/core/render/components/mesh/: BasicMesh.cxx  BasicMesh.h  Vertex.cxx  Vertex.h
src/core/render/components/mesh/presets/: Cube.cxx  Cube.h  Plane.cxx  Plane.h  Sphere.cxx  Sphere.h
src/core/render/components/meshes/: BasicMesh.h  Cube.cxx  Cube.h  Plane.cxx  Plane.h  Sphere.cxx  Sphere.h
src/core/render/components/shaders/: Shader.cxx  Shader.h  ShaderProgram.cxx  ShaderProgram.h
src/core/render/components/texture/: Texture.cxx  Texture.h
src/core/render/window_manager/: WindowCompositor.cxx  WindowCompositor.h
src/sub_programs/: CLTest.clkc
src/sub_programs/shaders/default/: simple.frag  simple.vert
src/sub_programs/shaders/gas/: gas.frag  gas.vert
src/sub_programs/shaders/gas_3d/: simple.frag
src/sub_programs/shaders/pp/: pp.frag  pp.vert
src/sub_programs/shaders/rt/: rt.frag  rt.vert
src/sub_programs/shaders/test/: triangle.frag  triangle.vert
src/utils/: Logger.cxx  Logger.h  Tools.cxx  Tools.h
src/utils/checker/: Checker.cpp
src/utils/logger/: Logger.cxx  Logger.h
src/utils/math/: Line2D.cxx  Line2D.h  MathHeaders  Matrix4x4.h  Operator.h  Vector2.h  Vector3.h
src/utils/timer/: Timer.cxx  Timer.h
